# haskell-modules

./: LICENSE  README.md  haskell-modules.cabal
src/: Module.hs
src/Language/Haskell/Modules/: Parser.hs  Semantics.hs  Syntax.hs
test/: Include.hs  Test.hs
test/ex00/: M.hs  N.hs  exp.hs
