name:                haskell-modules
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/cronburg/haskell-modules#readme
license:             BSD3
license-file:        LICENSE
author:              Karl Cronburg
maintainer:          karl@cs.tufts.edu
copyright:           2016 Karl Cronburg
category:            Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.Modules.Parser
                     , Language.Haskell.Modules.Syntax
  build-depends:       base >= 4.7 && < 5, parsec, template-haskell
  default-language:    Haskell2010

test-suite haskell-modules-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , haskell-modules
                     , parsec
                     , mtl 
                     , lens
                     , QuickCheck
                     , HUnit
                     , Cabal
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cronburg/haskell-modules
